# notecli

./: Cargo.toml
notes/: bye world.md  hello world.md  notes.json  testing.md
src/: main.rs
